# diffgeom2pose

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README  README.md  demo.m  rf_get_sigmas.m  rf_pose_from_point_tangents_2.m  rf_pose_from_point_tangents_2_fn_t.m  rf_sample_pose_poly.m
cmd/: CMakeLists.txt  demo.cxx  diffgeom2pose-test.cxx  diffgeom2pose.cxx
config/cmake/Modules/: MINUSStandardOptions.cmake
config/cmake/export/: DIFGEOM2POSECreateProject.cmake
diffgeom2pose/: common.hxx  rf_find_bounded_root_intervals.hxx  rf_pose_from_point_tangents_2.hxx  rf_pose_from_point_tangents_root_find_function_any.hxx  rf_sample_pose_poly.hxx
matlab/: rf_find_bounded_root_intervals.m  rf_get_r_t_from_rhos.m  rf_pose_from_point_tangents_2.m  rf_pose_from_point_tangents_2_fn_t.m  rf_pose_from_point_tangents_2_fn_t_for_root.m  rf_pose_from_point_tangents_root_find_function_any.m  rf_rhos_from_root_ids.m
p2pt/: CMakeLists.txt  common.hxx  find_bounded_root_intervals.hxx  get_r_t_from_rhos.hxx  get_sigmas.hxx  p2pt.h  p2pt.hxx  poly.h  pose_from_point_tangents_2.hxx  pose_from_point_tangents_2_fn_t.hxx  pose_from_point_tangents_2_fn_t_for_root.hxx  pose_from_point_tangents_root_find_function_any.hxx  pose_poly.h  pose_poly.hxx  rf_find_bounded_root_intervals.hxx  rf_get_r_t_from_rhos.hxx  rf_get_sigmas.hxx  rf_pose_from_point_tangents_2.hxx  rf_pose_from_point_tangents_2_fn_t.hxx  rf_pose_from_point_tangents_2_fn_t_for_root.hxx  rf_pose_from_point_tangents_root_find_function_any.hxx  rf_rhos_from_root_ids.hxx  rf_sample_pose_poly.hxx  rhos_from_root_ids.hxx  sample_pose_poly.hxx
p2pt/Templates/: p2pt-alltypes-allformulations+double.cxx
scripts/: es
tests/: CMakeLists.txt  test-driver.cxx  test-include.cxx  test-p2pt-constants.hxx  test-p2pt.cxx  test.cxx
